# tetris_hw

./: .gitignore  README.md
oj_version/: backup.c  main.c  概要设计.md
oj_version/v2/: alter  alter.c  file_ver  file_ver.c  generate_input.py  input.txt  oj_ver  oj_ver.c
train/: constants.py  dbt.py  game.py  models.py  training.py  training_v2.py  visualize.py
train_cpp/: CMakeLists.txt  constants.cpp  constants.h  extractor.cpp  extractor.h  game.cpp  game.h  main.cpp  models.cpp  models.h  training.cpp  training.h  visualize.cpp  visualize.h
